// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Badge Badge 1`] = `
Array [
  .c0 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
}

.c1 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c1 .RcButton-startIcon {
  margin-right: 8px;
}

.c1 .RcButton-endIcon {
  margin-left: 8px;
}

.c1.RcButton-text {
  color: #066FAC;
}

.c1.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c1.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c1.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c1.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c1.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c1.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    className="MuiBadge-root c0"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        +1
      </span>
    </button>
    <span
      className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangular"
    >
      0
    </span>
  </span>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 .RcBadge-badge {
  margin: var(--badge-round-margin);
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
}

.c1 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  border-radius: 100vw;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c1 .RcButton-startIcon {
  margin-right: 8px;
}

.c1 .RcButton-endIcon {
  margin-left: 8px;
}

.c1.RcButton-text {
  color: #066FAC;
}

.c1.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c1.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c1.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c1.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c1.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c1.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<span
    className="MuiBadge-root c0"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        +1
      </span>
    </button>
    <span
      className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
    >
      0
    </span>
  </span>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  color: #FFFFFF;
  font-size: 1.25rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 28px;
  width: 64px;
  height: 64px;
  background-color: #F3F3F3;
}

.c2 > img,
.c2 > canvas {
  width: 100%;
  height: 100%;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
}

.c0 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    className="MuiBadge-root c0"
  >
    <div
      className="c1 "
      data-test-automation-class="avatar"
    >
      <div
        className="c2 RcAvatar-avatarContainer"
      >
        CK
      </div>
    </div>
    <span
      className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightCircular"
    >
      0
    </span>
  </span>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Badge Badge Examples 1`] = `
.c10 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #066FAC;
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  color: #FFFFFF;
  font-size: 1.25rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 28px;
  width: 64px;
  height: 64px;
  background-color: #F3F3F3;
}

.c6 > img,
.c6 > canvas {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
}

.c1 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
}

.c3 .RcBadge-badge {
  margin: var(--badge-round-margin);
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
}

.c7 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c7 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c8 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c8 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c14 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
}

.c2 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c2 .RcButton-startIcon {
  margin-right: 8px;
}

.c2 .RcButton-endIcon {
  margin-left: 8px;
}

.c2.RcButton-text {
  color: #066FAC;
}

.c2.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c2.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c2.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c2.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c2.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c2.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c4 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  border-radius: 100vw;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c4 .RcButton-startIcon {
  margin-right: 8px;
}

.c4 .RcButton-endIcon {
  margin-left: 8px;
}

.c4.RcButton-text {
  color: #066FAC;
}

.c4.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c4.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c4.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c4.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c4.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c4.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c11 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c12 {
  font-family: Lato,Helvetica,Arial,sans-serif;
}

.c13.highlight-term {
  color: #121212 !important;
  background-color: #FFDFB1 !important;
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      overlap="rectangular"
    </h5>
    <span
      className="MuiBadge-root c1"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c2"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          right bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c2"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          right bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomRightRectangular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c2"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          left top
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopLeftRectangular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c2"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          left bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomLeftRectangular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <br />
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      overlap="round"
    </h5>
    <span
      className="MuiBadge-root c3"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c4"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          right bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c3"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c4"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          right bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomRightRectangle"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c3"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c4"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          left top
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopLeftRectangle"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c3"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c4"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          left bottom
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomLeftRectangle"
      >
        1
      </span>
    </span>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      overlap="circular"
    </h5>
    <span
      className="MuiBadge-root c1"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightCircular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomRightCircular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopLeftCircular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <span
      className="MuiBadge-root c1"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginBottomLeftCircular"
      >
        1
      </span>
    </span>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      Overlap None
    </h5>
    <span
      className="MuiBadge-root c7"
    >
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
      >
        abc
      </span>
    </span>
    <br />
    <span
      className="MuiBadge-root c8"
    >
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      With Icon
    </h5>
    <span
      className="MuiBadge-root c1"
    >
      <span
        className="c9 phone icon"
      >
        <svg
          className="c10"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.228 14.296c.124.331.324.717.602 1.154.285.448.649.938 1.09 1.465a13.92 13.92 0 0 0 1.328 1.391c.395.352.753.616 1.068.791.121.067.226.121.312.159l.218-.239.08-.078c-.004.003.001-.001.009-.015l.076-.093c.226-.238.417-.428.575-.573.171-.156.362-.306.617-.477a3.574 3.574 0 0 1 2.169-.483c.803.071 1.484.39 1.965.905.599.566 1.221 1.131 1.865 1.697s1.489 1.28 2.534 2.141c.586.482.976 1.073 1.157 1.757.184.694.125 1.365-.161 1.937-.193.479-.565 1.044-1.117 1.713-.544.659-1.035 1.155-1.456 1.47-.44.363-.947.637-1.516.818a6.01 6.01 0 0 1-1.829.264c-1.073 0-2.192-.21-3.356-.625-1.135-.405-2.29-.984-3.466-1.737a24.989 24.989 0 0 1-3.475-2.719 36.73 36.73 0 0 1-3.448-3.565c-1.492-1.787-2.714-3.551-3.664-5.291-.955-1.731-1.628-3.354-2.018-4.87-.397-1.544-.493-2.938-.281-4.173.204-1.306.769-2.366 1.703-3.149.433-.361 1.041-.728 1.828-1.11.803-.39 1.468-.63 2.018-.716.735-.115 1.455-.01 2.133.308s1.204.818 1.577 1.5a33.63 33.63 0 0 0 1.257 2.265 49.99 49.99 0 0 0 1.696 2.601c.414.626.579 1.307.486 2.017-.091.699-.403 1.322-.977 1.9a6.076 6.076 0 0 1-1.027.705 1.161 1.161 0 0 1-.218.137l-.171.083a2.256 2.256 0 0 1-.223.12 1.99 1.99 0 0 0-.144.067c.027.132.084.31.182.548z"
          />
        </svg>
        
      </span>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightCircular"
      >
        1
      </span>
    </span>
    <br />
    <br />
    <p
      className="MuiTypography-root c11 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="body1"
    >
      When BadgeContent is number, that will limit with prop
       
      <span
        className="MuiTypography-root c12 c13 highlight-term MuiTypography-noWrap"
        data-color="initial"
        data-variant="inherit"
        title="max"
      >
        max
      </span>
    </p>
    <span
      className="MuiBadge-root c14"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightCircular"
      >
        5+
      </span>
    </span>
    <br />
    <br />
    <p
      className="MuiTypography-root c11 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="body1"
    >
      When BadgeContent is not number, that will not limit with prop
       
      <span
        className="MuiTypography-root c12 c13 highlight-term MuiTypography-noWrap"
        data-color="initial"
        data-variant="inherit"
        title="max"
      >
        max
      </span>
    </p>
    <span
      className="MuiBadge-root c14"
    >
      <div
        className="c5 "
        data-test-automation-class="avatar"
      >
        <div
          className="c6 RcAvatar-avatarContainer"
        >
          CK
        </div>
      </div>
      <span
        className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightCircular"
      >
        - 123 -
      </span>
    </span>
  </div>
</div>
`;
